<resources>
    <string name="app_name">Pick A Bite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="foods">Foods</string>
    <string name="cakes">Cakes</string>
    <string name="food_name"><b>Food name</b></string>
    <string name="food_image">Food Image</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="favourites">Favourites</string>
    <string name="more">More</string>
    <string name="cart">Cart</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_your_favourites">Search your favourites</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="kababs_grills"> KABABS &amp; GRILLS </string>
    <string name="chinese_delights_veg"> CHINESE DELIGHTS VEG </string>
    <string name="rice_n_noodles"> RICE \'N\' NOODLES </string>
    <string name="salads"> SALADS </string>
    <string name="non_veg_appetizers"> NON-VEG APPETIZERS </string>
    <string name="starters_soups"> STARTERS SOUPS </string>
    <string name="non_veg_gravy"> NON-VEG GRAVY </string>
    <string name="veg_gravy"> VEG GRAVY </string>
    <string name="rice"> RICE </string>
    <string name="arabic"> ARABIC </string>

    <string name="about">Pick-A-Bite is an online food ordering service given to the Organisations, Schools and Colleges in different places. PAB is a service oriented business plan laid down by students of Amrita University with the supervision of Amrita TBI. We focus on creating a platform for home chefs also. We have chosen our target market as organisations because, today in this busy schedule they find it really difficult to have tasty food so that\'s where help them out. And our other services include Cake delivery and Sales of Gourmet Products. Now we have a customer base of 800+ within a short span of 60 days. We have been serving to almost 5+ Institutions in and around the area of operation.</string>
    <string name="save_amp_continue">SAVE &amp; CONTINUE</string>
</resources>
