<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Holo.Light"
    tools:context=".TabbedActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:background="@android:color/white"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:theme="@style/toolbar_theme">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:textColor="@color/darker_grey"
                android:hint="@string/search_your_favourites"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edittext"
                android:textColorHint="#78909C"
                app:backgroundTint="@color/blue"
                android:paddingBottom="10dp"/>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            app:tabIndicatorColor="#0064A0"
            app:tabIndicatorHeight="4dp"
            app:tabTextColor="@android:color/white"
            app:tabTextAppearance="@style/MyCustomTabText"
            app:tabBackground="@color/dark_orange">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kababs_grills" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rice" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg_gravy" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_veg_gravy" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starters_soups" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salads" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_veg_appetizers" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinese_delights_veg" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rice_n_noodles" />
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>